2001-06-13  Goodwin Scott S Civ 96 CG/SCTOB  <scott@scottg.net>

	* init.c: added NsClientSSLCreateDriver and NsClientSSLFreeDriver.

	* init.c, nsopenssl.h: moved OpenSSL initialization out of
	NsServerCreateDriver to the new NsInitOpenSSL function.

	* init.c, nsopenssl.c, nsopenssl.h: changed NsOpenSSLCreateDriver
	to NsServerSSLCreateDriver and NsOpenSSLFreeDriver to
	NsServerSSLFreeDriver.

	* nsopenssl.c: added NsClientSSLConnection and NsClientSSLDriver
	structs (I know, the client stuff doesn't need a driver; I'll work
	that issue later.)

	* all: changed NsOpenSSLConnection struct name to
	NsServerSSLConnection and NsOpenSSLDriver to NsServerSSLDriver in
	preparation for adding client structures.

2001-06-12  Scott S. Goodwin  <scott@scottg.net>

	* init.c, nsopenssl.c, nsopenssl.h: prefixed static functions that
	are server-specific with "Server", and replaced "NsOpenSSL" with
	"NsServerSSL" to make room for the upcoming client functions,
	which will be called "NsClientSSL".

	* nsopenssl-client-test.htm: added this file to test connectivity
	for the nsopenssl client code.

	* Makefile: removed old CLIENTVERIFY test preprocessor stuff.

	* all: changed #ifdef AS3 to #ifndef NS_MAJOR_VERSION. This means
	it now compiles for AOLserver 3.x by default, since
	NS_MAJOR_VERSION doesn't even exist in 4.x yet.

	* nsopenssl.h: Added code to define the OpenSSL library in use by
	pulling the OPENSSL_VERSION_NUMBER from the source.

2001-06-08  Scott S. Goodwin  <scott@scottg.net>

	* init.c: added SSL_CTX_set_session_id_context call and
	s_server_session_id_context integer. If session caching is on
	(which it is by default) and clientverify is also on (which it is
	not by default) all connections after the first for a particular
	session fail as OpenSSL gets confused. Setting the
	session_id_context fixes this problem. NOTE: if you run more than
	one nsopenssl module on the same server, both of those modules